action: fix target branch of  release tag & compile

--- a/.github/workflows/Auto compile with openwrt sdk.yml
+++ b/.github/workflows/Auto compile with openwrt sdk.yml
@@ -14,7 +14,6 @@ on:
 env:
   TZ: Asia/Shanghai
   passwall: ${{ github.repository }}
-  psw-brunch: luci-smartdns-dev
   packages: xiaorouji/openwrt-passwall-packages
 
 
@@ -30,7 +29,7 @@ jobs:
         uses: actions/checkout@main
         with:
           fetch-depth: 0
-          ref: '${{ env.psw-brunch }}'
+          ref: ${{ github.ref_name }}
 
       - name: Check version
         id: check_version
@@ -61,6 +60,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{steps.check_version.outputs.latest_version}}
+          target_commitish: ${{ github.ref_name }}
+          prerelease: true
           body_path: release.txt
 
 
@@ -110,7 +111,7 @@ jobs:
           echo "src-git luci https://github.com/openwrt/luci.git;openwrt-${{ matrix.luci_ver }}" >> feeds.conf
           echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}"  >> feeds.conf
           echo "src-git passwall_packages https://github.com/${{ env.packages }}.git;main" >> feeds.conf
-          echo "src-git passwall https://github.com/${{ env.passwall }}.git;${{ env.psw-brunch }}" >> feeds.conf
+          echo "src-git passwall https://github.com/${{ env.passwall }}.git;${{ github.ref_name }}" >> feeds.conf
           ./scripts/feeds update -a
           echo "CONFIG_PACKAGE_luci-app-passwall=m" > .config
           ./scripts/feeds install -d n luci-app-passwall
